# advx2025-prj-enlighten

./: config.example.py  config.py  fix_audio.sh  list_audio.py  main.py  pyproject.toml  signals.py  utils.py
camera/: __init__.py
llm/: __init__.py
speech_recognition/: __init__.py
